--- a/app/styles/_overview.less
+++ b/app/styles/_overview.less
@@ -119,11 +119,6 @@
       // Avoid double border since the input is directly beside the filter select.
       border-left: 0;
     }
-    .label-filter .label-filter-key .selectize-input.not-full {
-      // FIXME: temp workaround for problem created by
-      // https://github.com/openshift/origin-web-console/pull/1216
-      width: auto;
-    }
     .name-filter {
       form,
       input {
